sm/sm-smartbytes/main/default/objects/blng__Invoice__c/fields/Payment_Site__c.field-meta.xml
<CustomField>
    <fullName>Payment_Site__c</fullName>
    <formula>Hyperlink($CustomMetadata.RC_IDO_Settings__mdt.BaseURL.Value__c &amp; Id, &apos;Payment Link&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Site</label>
    <type>Text</type>
</CustomField>