sm/sm-smartbytes/main/default/objects/blng__Invoice__c/fields/Payment_Site_URL__c.field-meta.xml
<CustomField>
    <fullName>Payment_Site_URL__c</fullName>
    <formula>$CustomMetadata.RC_IDO_Settings__mdt.BaseURL.Value__c &amp; Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Site URL</label>
    <type>Text</type>
</CustomField>